# oms-gateway

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
scripts/: backfill_fills_tca.py
src/oms_gateway/: __init__.py  bankroll_aware_sizing.py  bankroll_refresher.py  budget_reservation.py  db.py  health.py  kelly_allocator.py  lp_multiplier.py  main.py  max_loss.py  metrics.py  preflight.py  redis_client.py  router.py  settings.py  sizing.py
tests/: conftest.py  test_aggressive_ladder.py  test_backfill_fills_tca.py  test_bankroll_aware_sizing.py  test_bankroll_refresher.py  test_budget_reservation.py  test_concentration.py  test_kelly_allocator.py  test_lp_multiplier.py  test_max_loss.py  test_metrics.py  test_position_cap.py  test_preflight.py  test_router_metadata.py  test_sizing.py  test_sizing_lp_multiplier.py  test_sizing_overrides.py  test_strategy_order_cap.py  test_strategy_whitelist.py
