[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "oms-gateway"
version = "0.1.0"
description = "Order-management gateway. Subscribes to alphas:active, runs L0 preflight (drawdown caps + halt state), records oms_intents. Phase 2."
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "structlog>=24.1",
    "pydantic-settings>=2.3",
    "aiohttp>=3.9",
    "signals-contract @ https://github.com/1305a001-ctrl/signals-contract/archive/refs/tags/v0.2.0.tar.gz",
]

[project.scripts]
oms-gateway = "oms_gateway.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
